[project]
name = "sangcheol-odyssey-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "orjson>=3.11.2",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.10",
    "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project.scripts]
dev = "scripts.cli:start_dev_server"
serve = "scripts.cli:start_prod_server"

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]
